codegen/tests/ui/malformed-param-list.stderr
error: malformed parameter
 --> $DIR/malformed-param-list.rs:4:9
  |
4 | #[get("/><")]
  |         ^^
  |
  = help: parameters must be of the form '<param>'

error: malformed parameter
 --> $DIR/malformed-param-list.rs:7:9
  |
7 | #[get("/<id><")]
  |         ^^^^^
  |
  = help: parameters must be of the form '<param>'

error: malformed parameter
  --> $DIR/malformed-param-list.rs:10:9
   |
10 | #[get("/<<<<id><")]
   |         ^^^^^^^^
   |
   = help: parameters must be of the form '<param>'

error: parameter names must be valid identifiers
  --> $DIR/malformed-param-list.rs:13:9
   |
13 | #[get("/<!>")]
   |         ^^^
   |
   = note: "!" is not a valid identifier

error: parameters must be named
  --> $DIR/malformed-param-list.rs:16:9
   |
16 | #[get("/<_>")]
   |         ^^^
   |
   = help: use a name such as `_guard` or `_param`

error: parameter names must be valid identifiers
  --> $DIR/malformed-param-list.rs:19:9
   |
19 | #[get("/<1>")]
   |         ^^^
   |
   = note: "1" is not a valid identifier

error: malformed parameter
  --> $DIR/malformed-param-list.rs:22:9
   |
22 | #[get("/<>name><")]
   |         ^^^^^^^^
   |
   = help: parameters must be of the form '<param>'

error: parameter names must be valid identifiers
  --> $DIR/malformed-param-list.rs:25:9
   |
25 | #[get("/<name>:<id>")]
   |         ^^^^^^^^^^^
   |
   = note: "name>:<id" is not a valid identifier

error: parameters cannot be empty
  --> $DIR/malformed-param-list.rs:28:9
   |
28 | #[get("/<>")]
   |         ^^

error: aborting due to 9 previous errors

